# agent-eval-loop

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: best-practices.md
examples/customer_support/: config.yaml  mocks.py  run.py  scenarios.yaml
examples/customer_support/components/instructions/: v1.md
examples/customer_support/components/routines/: v1.md
examples/customer_support/components/tools/: v1.yaml
examples/customer_support/components/tools_usage/: v1.md
src/agent_eval_loop/: __init__.py  __main__.py  loop.py  models.py
src/agent_eval_loop/agent/: __init__.py  config.py  runner.py  scratchpad.py
src/agent_eval_loop/evaluate/: __init__.py  calibration.py  judges.py  scorer.py
src/agent_eval_loop/improve/: __init__.py  analyzer.py  optimizer.py  regression.py
src/agent_eval_loop/simulate/: __init__.py  generator.py  personas.py  scenarios.py
